# figops

./: .dockerignore  .gitattributes  .gitignore  .pdca-status.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Claude.md  Dockerfile  GEMINI.md  LICENSE  MANIFEST.in  NOTICE  README.md  Research_Central_Architecture.md  SUB_AGENTS.md  __init__.py  baseline.receipt.md  conftest.py  docs-release-alignment.receipt.md  figops_mcp_server.py  graphhub_mcp_launcher.py  graphhub_mcp_server.py  hub_uv.py  orchestrator.py  p1-correctness.patch-and-tests.md  p2-safety-runtime.patch-and-tests.md  project_config_template.yaml  pyproject.toml  task.md  verification.report.md
.github/: windows-security-pytest.txt
archive/: plan.old.md
docs/: KEYWORDS.md  QA.md  ROADMAP.md  architecture.md  audit_remaining_handoff_spec.md  legacy_architecture.md  mcp_errors.md  mcp_setup.md  onboarding.md  plot_template_boilerplate.md  positioning.md  project-structure-contract.md  quickstart.md  requirements-lock.txt  requirements.txt  tools-compatibility.md  tools-v2.md  tools.md
experiments/: README.md  generate_fig1_lean.py  test_evolution.py  test_unification_run.py
hub_core/: __init__.py  allowed_data.py  approval_authority.py  approval_authority_codec.py  approval_authority_lifecycle.py  artifact_audit.py  artifact_integrity.py  artifact_policy_measurement.py  athena_bridge.py  atomic_no_clobber.py  attempt_provenance.py  batch_reformat.py  cache_manager.py  calculation_evidence.py  canonical_docs.py  claim_inventory.py  claim_script_inspection.py  config_adapter_validation.py  config_assemblies.py  config_contract_defaults.py  config_language_policy.py  config_parser.py  config_path_discovery.py  config_placeholders.py  config_project_registry.py  config_research_metadata.py  config_schema.py  config_semantic_checks.py  config_style.py  config_sweep_comparison.py  config_top_level_keys.py  config_visual_outputs.py  config_visual_style.py  config_workflow_intent.py  data_contract.py  data_contract_calculation_checks.py  data_contract_io.py  data_contract_semantic_grouped.py  data_contract_semantic_ordering.py  data_contract_semantic_quality.py  (+107 more)
plotting/: __init__.py  axis_break.py  bridge_renderer.py  common_plots.py  elements.py  figure_assembler.py  ispd_visualizer.py  smart_layout.py  trend_insight.py  utils.py
scripts/: architecture_inventory.py  check_ci_cost_policy.py  check_geometry_rubric_map.py  check_public_release.py  consumer_install_smoke.py  gen_tool_reference.py  github_release_asset_smoke.py  guarded_pypi_upload.py  package_metadata_smoke.py  project_figure_inventory.py  public_core_inventory.py  public_package_surface.py  release_discipline.py
tests/: _symlink.py  conftest.py  human_review_receipt_helpers.py  test_adapters.py  test_ai_native_baseline_witnesses.py  test_ai_native_visual_review_protocol.py  test_approval_authority.py  test_architecture_inventory.py  test_artifact_audit.py  test_assembly.py  test_athena_bridge_quality.py  test_atomic_no_clobber.py  test_axis_break.py  test_batch_reformat.py  test_bridge_renderer.py  test_bridge_renderer_robustness.py  test_cache_manager.py  test_calculation_evidence_lineage.py  test_canonical_docs.py  test_ci_cost_policy.py  test_claim_boundaries.py  test_common_plots.py  test_config_nested_path.py  test_config_parser_sweep.py  test_config_placeholders.py  test_config_workflow_intent.py  test_consumer_install_smoke.py  test_data_contract_new.py  test_data_contract_quality.py  test_data_contract_semantic_ordering.py  test_data_inspection.py  (+114 more)
(+265 files in other folders)
