[project]
name = "graph-making-hub"
version = "0.1.0"
description = "Reproducible plotting and analysis pipeline for research projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.66,<4",
    "matplotlib>=3.7,<4",
    "numpy>=1.24,<3",
    "pandas>=2.0,<3",
    "pydantic>=2.12.5,<3",
    "pyyaml>=6.0,<7",
    "scipy>=1.10,<2",
    "statsmodels>=0.14,<1",
    "openpyxl>=3.1,<4",
    "rich>=13.0,<15",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["--import-mode=importlib"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
