[project]
name = "graph-making-hub"
version = "0.10.0"
description = "Reproducible plotting and analysis pipeline for research projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.7,<4",
    "numpy>=1.24,<3",
    "pandas>=2.0,<3",
    "pyyaml>=6.0,<7",
    "scipy>=1.10,<2",
    "statsmodels>=0.14,<1",
    "openpyxl>=3.1,<4",
    "rich>=13.0,<15",
    "markdown>=3.10.2",
    "pymdown-extensions>=10.21.3",
    "python-pptx>=1.0.2",
    "svgutils>=0.3.4",
    "lxml>=6.1.0",
    "adjusttext>=1.3,<2",
]

[project.optional-dependencies]
io = [
    "pyarrow>=14.0",
    "tables>=3.9",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["--import-mode=importlib"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
