[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "figops"
version = "0.19.0"
description = "Reproducible plotting and analysis pipeline for research projects"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Choemun Yeong" },
]
maintainers = [
    { name = "Moonweave Research" },
]
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
dependencies = [
    "matplotlib>=3.7,<4",
    "numpy>=1.24,<3",
    "pandas>=2.0,<3",
    "pyyaml>=6.0,<7",
    "scipy>=1.10,<2",
    "statsmodels>=0.14,<1",
    "openpyxl>=3.1,<4",
    "rich>=13.0,<15",
    "markdown>=3.10.2",
    "pymdown-extensions>=10.21.3",
    "python-pptx>=1.0.2",
    "svgutils>=0.3.4",
    "lxml>=6.1.0",
    "adjusttext>=1.3,<2",
]

[project.optional-dependencies]
io = [
    "pyarrow>=14.0",
    "tables>=3.9",
]

[project.scripts]
figops = "orchestrator:main"
figops-mcp = "figops_mcp_server:main"
graphhub = "orchestrator:main"
graphhub-mcp = "graphhub_mcp_server:main"

[project.urls]
Homepage = "https://github.com/Moonweave-Research/figops"
Repository = "https://github.com/Moonweave-Research/figops"
Issues = "https://github.com/Moonweave-Research/figops/issues"

[tool.setuptools]
py-modules = ["figops_mcp_server", "graphhub_mcp_server", "hub_uv", "orchestrator"]

[tool.setuptools.packages.find]
include = ["hub_core*", "plotting*", "themes*"]

[tool.setuptools.package-data]
hub_core = ["templates/*.yaml"]
themes = ["*.yaml", "*.R", "data/*.json"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["--import-mode=importlib"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff==0.15.20",
]
